--- a/#src/index.html
+++ b/#src/index.html
@@ -29,6 +29,22 @@
                         </li>
                         <li>
                             <a href="#" class="header__link">Услуги </a>
+                            <ul class="servises">
+                                <li><a href="#">Дерматология</a>  </li>
+                                <li><a href="#">Дерматоонкология</a>
+                                    <ul class="dermatolog">
+                                        <li><a href="#">Гемангиома лечение</a></li>
+                                        <li><a href="#">Лечение базалиом</a></li>
+                                        <li><a href="#">Диагностика меланом</a></li>
+                                        <li><a href="#">Лечение ксантелазм (ксантом)</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Медицинская косметология</a></li>
+                                <li><a href="#">Венерология</a></li>
+                                <li><a href="#">Трихология</a></li>
+                                <li><a href="#">Онихология</a></li>
+                                <li><a href="#">Урология</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#" class="header__link">Цены на услуги  </a>
