add new adaptive

--- a/#src/index.html
+++ b/#src/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colaees-Clinic</title>
-    <link rel="stylesheet" href="css/style.css" />
+	<title>Colaees-Clinic</title>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <div class="container">
@@ -21,14 +22,14 @@
           </div>
           <nav class="header__menu">
             <ul class="header__list">
-              <li >
+              <li>
                 <a href="#" class="header__link">О клинике</a>
               </li>
-              <li >
+              <li>
                 <a href="#" class="header__link">Что мы лечим </a>
               </li>
               <li class="header__item-servises header__link-servises">
-                <a href="#" class="header__link  ">Услуги </a>
+                <a href="#" class="header__link">Услуги </a>
                 <ul class="servises">
                   <li><a href="#">Дерматология</a></li>
                   <li class="header__item-derma">
@@ -75,8 +76,20 @@
                   <span>50%</span>
                 </div>
               </div>
-             
-             
+              <div class="item">
+                <div class="flower__text">
+                  <h1>Удаление папилом</h1>
+                  <p>оплати единоразово 7 процедур — получи скидку</p>
+                  <span>50%</span>
+                </div>
+              </div>
+              <div class="item">
+                <div class="flower__text">
+                  <h1>Удаление папилом</h1>
+                  <p>оплати единоразово 7 процедур — получи скидку</p>
+                  <span>50%</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -98,6 +111,9 @@
         </p>
       </div>
     </div>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
